# exchange

./: Cargo.toml  README.md
exchange/: Cargo.toml
exchange-cli/: Cargo.toml
exchange-cli/src/: cli.rs  conversion.rs  main.rs
exchange/src/: amount.rs  client.rs  error.rs  exchange.rs  lib.rs  registry.rs  transaction.rs
fixtures/custom/: input.csv
fixtures/example/: input.csv  output.csv
